  entry for the "panel" command
- VARs: support gaps in the lag structure
- New GUI graph option: "Plot curve" under the tools menu,
  for quick plotting of a formula
- Chow test: add the option of specifying a dummy variable
  rather than a break point
- Boxplots: enable boxplot command in loops
- "var" command: allow single-equations VARs

1/23/2008 version 1.8.0
- Fix bug: crash in "Add random variable" dialog
- Translation fixes
- Add new command: "modprint"
- Remove obsolete commands: "rhodiff" and "hccm"
- Speed-ups for the pdf() function as applied to a
  series argument
- New option --numeric for the nls and mle commands,
  to force the use of numerical derivatives
- Numerous small graphing and GUI fixes
- MS Windows: fix for opening graphs in old session files
- Graphs: "display PDF" option: fix possible encoding issue
- GUI graph controller: new facility to add a line, defined
  via a formula, to an existing graph
- GUI graph controller: add facility to choose point style
- Gnuplot line-color selector: extend to 6 colors, and
  distinguish between setting the "palette" and setting
  ad hoc colors for a specific graph
- Scalars: make these accessible via the icon view window;
  enable copying to clipboard as CSV; enable entry of a 
  formula (starting with "=") in scalar-editing window
- Fix encoding issue when copying to clipboard as plain
  text or RTF
- Boxplots: hand the production of these over to gnuplot
- New function: urcpval(), gives user access to James
  MacKinnon's p-values for unit root and cointegration test
  statistics (tau)
- New function: mpols(), enables multiple-precision OLS for
  user-defined matrices
- New function: toepsolv(), solves a Toeplitz system of
  linear equations
- New function: mcovg(), matrix covariogram
- Improve error-reporting in relation to GUI genr dialog
- Make parsing of input from GUI ARMA dialog more robust
- New feature: add importer for SPSS .sav files
- CSV importer: try to handle time-series data in reverse